generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Project {
  id              String   @id @default(uuid())
  
  // Identitas Proyek
  name            String
  description     String?
  ownerSquad      String
  pic             String

  // Detail Arsitektur
  type            String   // New Service / Major Change
  docLinks        DocumentationLink[]
  
  // Timeline & Governance
  submissionDate  DateTime @default(now())
  reviewDate      DateTime?
  decisionDate    DateTime? // Tanggal Keputusan
  status          String   @default("Submitted") // Submitted, In-Review, Approved, Rejected

  // Hasil Akhir
  decision        String?
  mitigationNotes String?
  adrNumber       String?
  notes           String?
  slaDuration     Int      @default(5)
  slaTarget       DateTime // Calculated: submissionDate + slaDuration working days

  attachments     Attachment[]
  history         ProjectHistory[]
  followupTasks   FollowupTask[]

  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model FollowupTask {
  id          String   @id @default(uuid())
  description String
  isCompleted Boolean  @default(false)
  dueDate     DateTime
  projectId   String
  project     Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  attachments Attachment[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

// Removed FollowupTaskAttachment
// model FollowupTaskAttachment { ... }

model DocumentationLink {
  id        String   @id @default(uuid())
  url       String
  projectId String
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
}


model Attachment {
  id                  String   @id @default(uuid())
  filename            String
  path                String
  caption             String?
  mimeType            String   @default("application/octet-stream") // New field
  createdAt           DateTime @default(now())

  // Polymorphic Relations (Optional FKs)
  projectId           String?
  project             Project? @relation(fields: [projectId], references: [id], onDelete: Cascade)

  followupTaskId      String?
  followupTask        FollowupTask? @relation(fields: [followupTaskId], references: [id], onDelete: Cascade)

  sideQuestId         String?
  sideQuest           SideQuest? @relation(fields: [sideQuestId], references: [id], onDelete: Cascade)

  sideQuestFollowUpId String?
  sideQuestFollowUp   SideQuestFollowUp? @relation(fields: [sideQuestFollowUpId], references: [id], onDelete: Cascade)
}

model Squad {
  id    Int    @id @default(autoincrement())
  name  String @unique
}

model ArchivedProject {
  id              String   @id
  
  // Identitas Proyek
  name            String
  description     String?
  ownerSquad      String
  pic             String

  // Detail Arsitektur
  type            String   // New Service / Major Change
  docLinks        ArchivedDocumentationLink[]
  
  // Timeline & Governance
  submissionDate  DateTime
  reviewDate      DateTime?
  decisionDate    DateTime?
  status          String 

  // Hasil Akhir
  decision        String?
  mitigationNotes String?
  adrNumber       String?
  notes           String?
  slaDuration     Int
  slaTarget       DateTime

  attachments     ArchivedAttachment[]
  followupTasks   ArchivedFollowupTask[]

  createdAt       DateTime
  updatedAt       DateTime
  archivedAt      DateTime @default(now())
}

model ArchivedFollowupTask {
  id                String          @id @default(uuid())
  description       String
  isCompleted       Boolean
  dueDate           DateTime
  projectArchivedId String
  projectArchived   ArchivedProject @relation(fields: [projectArchivedId], references: [id], onDelete: Cascade)
  attachments       ArchivedAttachment[]
  createdAt         DateTime
  updatedAt         DateTime
}


model ArchivedDocumentationLink {
  id        String   @id @default(uuid())
  url       String
  projectId String
  project   ArchivedProject  @relation(fields: [projectId], references: [id], onDelete: Cascade)
}

model ArchivedSideQuest {
  id          String   @id
  ticketCode  String
  questName   String
  instruction String
  requestDate DateTime
  requestor   String
  executor    String?
  dueDate     DateTime
  finishDate  DateTime?
  impactScore Int
  status      String
  createdAt   DateTime
  archivedAt  DateTime @default(now())

  followUps   ArchivedSideQuestFollowUp[]
  attachments ArchivedAttachment[]
}

model ArchivedSideQuestFollowUp {
  id                String    @id
  sideQuestId       String
  sideQuest         ArchivedSideQuest @relation(fields: [sideQuestId], references: [id], onDelete: Cascade)
  date              DateTime
  action            String
  createdAt         DateTime
  attachments       ArchivedAttachment[]
}

model ArchivedAttachment {
  id                      String                @id
  filename                String
  path                    String
  caption                 String?
  mimeType                String                @default("application/octet-stream")
  createdAt               DateTime

  // Polymorphic relations for archives
  projectId               String?
  project                 ArchivedProject?      @relation(fields: [projectId], references: [id], onDelete: Cascade)

  sideQuestId             String?
  sideQuest               ArchivedSideQuest?    @relation(fields: [sideQuestId], references: [id], onDelete: Cascade)

  sideQuestFollowUpId     String?
  sideQuestFollowUp       ArchivedSideQuestFollowUp? @relation(fields: [sideQuestFollowUpId], references: [id], onDelete: Cascade)

  archivedFollowupTaskId  String?
  archivedFollowupTask    ArchivedFollowupTask? @relation(fields: [archivedFollowupTaskId], references: [id], onDelete: Cascade)
}

model ProjectHistory {
  id        String   @id @default(uuid())
  projectId String
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  changes   String   // JSON string of changes: [{ field: "Status", old: "X", new: "Y" }]
  timestamp DateTime @default(now())
  actor     String?  // Name/ID of user who made the change
}

model SideQuest {
  id          String   @id @default(uuid())
  ticketCode  String
  questName   String   @default("Untitled Quest")
  instruction String
  requestDate DateTime @default(now())
  requestor   String   @default("Unknown")
  executor    String?
  dueDate     DateTime
  finishDate  DateTime?
  impactScore Int
  status      String   @default("Submited")
  createdAt   DateTime @default(now())

  followUps   SideQuestFollowUp[]
  attachments Attachment[]
}

model SideQuestFollowUp {
  id          String    @id @default(uuid())
  sideQuestId String
  sideQuest   SideQuest @relation(fields: [sideQuestId], references: [id], onDelete: Cascade)
  date        DateTime  @default(now())
  action      String
  createdAt   DateTime  @default(now())
  attachments Attachment[]
}

// Removed SideQuestAttachment and SideQuestFollowUpAttachment
// model SideQuestAttachment { ... }
// model SideQuestFollowUpAttachment { ... }
