erDiagram

    %% User and Authentication (Implicit / Future)
    %% Currently, User is represented implicitly via strings (PIC, Actor, Requestor)

    Project {
        String id PK
        String name
        String description
        String ownerSquad
        String pic
        String type
        DateTime submissionDate
        DateTime reviewDate
        DateTime decisionDate
        String status
        String decision
        String mitigationNotes
        String adrNumber
        String notes
        Int slaDuration
        DateTime slaTarget
        DateTime createdAt
        DateTime updatedAt
    }

    FollowupTask {
        String id PK
        String description
        Boolean isCompleted
        DateTime dueDate
        String projectId FK
        DateTime createdAt
        DateTime updatedAt
    }

    DocumentationLink {
        String id PK
        String url
        String projectId FK
        DateTime createdAt
    }

    Attachment {
        String id PK
        String filename
        String path
        String caption
        String mimeType
        DateTime createdAt
        String projectId FK "Optional"
        String followupTaskId FK "Optional"
        String sideQuestId FK "Optional"
        String sideQuestFollowUpId FK "Optional"
    }

    ProjectHistory {
        String id PK
        String projectId FK
        String changes "JSON"
        DateTime timestamp
        String actor
    }

    Squad {
        Int id PK
        String name
    }

    %% Archival System
    ArchivedProject {
        String id PK
        String name
        String description
        String ownerSquad
        String pic
        String type
        DateTime submissionDate
        DateTime reviewDate
        DateTime decisionDate
        String status
        String decision
        String mitigationNotes
        String adrNumber
        String notes
        Int slaDuration
        DateTime slaTarget
        DateTime createdAt
        DateTime updatedAt
        DateTime archivedAt
    }

    ArchivedFollowupTask {
        String id PK
        String description
        Boolean isCompleted
        DateTime dueDate
        String projectArchivedId FK
        DateTime createdAt
        DateTime updatedAt
    }

    ArchivedDocumentationLink {
        String id PK
        String url
        String projectId FK
    }

    ArchivedAttachment {
        String id PK
        String filename
        String path
        String mimeType
        String caption
        DateTime createdAt
        String archivedProjectId FK "Optional"
        String archivedSideQuestId FK "Optional"
        String archivedSideQuestFollowUpId FK "Optional"
    }

    %% Side Quest System
    SideQuest {
        String id PK
        String ticketCode
        String questName
        String instruction
        DateTime requestDate
        String requestor
        String executor
        DateTime dueDate
        DateTime finishDate
        Int impactScore
        String status
        DateTime createdAt
    }

    SideQuestFollowUp {
        String id PK
        String sideQuestId FK
        DateTime date
        String action
        DateTime createdAt
    }

    %% Archival System (Side Quest)
    ArchivedSideQuest {
        String id PK
        String ticketCode
        String questName
        String instruction
        DateTime requestDate
        String requestor
        String executor
        DateTime dueDate
        DateTime finishDate
        Int impactScore
        String status
        DateTime createdAt
        DateTime archivedAt
    }

    ArchivedSideQuestFollowUp {
        String id PK
        String archivedSideQuestId FK
        DateTime date
        String action
        DateTime createdAt
    }

    %% Relationships
    Project ||--o{ DocumentationLink : "has"
    Project ||--o{ Attachment : "has files"
    Project ||--o{ ProjectHistory : "has history"
    Project ||--o{ FollowupTask : "has tasks"
    Project }o..|| Squad : "owned by"

    FollowupTask ||--o{ Attachment : "has files"

    ArchivedProject ||--o{ ArchivedDocumentationLink : "has"
    ArchivedProject ||--o{ ArchivedAttachment : "has files"
    ArchivedProject ||--o{ ArchivedFollowupTask : "has tasks"

    SideQuest ||--o{ SideQuestFollowUp : "has follow-ups"
    SideQuest ||--o{ Attachment : "has files"
    SideQuestFollowUp ||--o{ Attachment : "has files"

    ArchivedSideQuest ||--o{ ArchivedSideQuestFollowUp : "has follow-ups"
    ArchivedSideQuest ||--o{ ArchivedAttachment : "has files"
    ArchivedSideQuestFollowUp ||--o{ ArchivedAttachment : "has files"
